* man/C/dpkg-scanpackages.1: Document new dpkg-scanpackages -m option. * scripts/dpkg-scanpackages.pl: Rewrite the script to support multiple versions of packages in a single Packages file; use Getopt::Long instead of attempting to parse the command line ourselves and doing it badly; get rid of unecessary hashes and arrays that aren't used at all; output help when given the --help/-h/-? options Closes: #229589, #319541

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2006-01-29  Frank Lichtenheld  <djpig@debian.org>
+
+	* man/C/dpkg-scanpackages.1: Document new dpkg-scanpackages
+	-m option added by Don Armstrong.
+	* scripts/dpkg-scanpackages.pl: Fix some bugs introduced by
+	the rewrite.
+
+2006-01-29  Don Armstrong  <don@debian.org>
+
+	* scripts/dpkg-scanpackages.pl: Rewrite the script to support
+	multiple versions of packages in a single Packages file;
+	use Getopt::Long instead of attempting to parse the command line
+	ourselves and doing it badly;
+	get rid of unecessary hashes and arrays that aren't used at all;
+	output help when given the --help/-h/-? options
+
 2006-01-29  maximilian attems  <debian@sternwelten.at>
 
 	* scripts/dpkg-source.pl: Add files and
