--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,11 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
     more complex setups (Julian Gilbey). Closes: #163061
   * Add files and dirs used by bzr to default dpkg-source -i regex
     (maximilian attems). Closes: #345164
+  * dpkg-scanpackages can now output Packages files with multiple
+    versions of a single package (Don Armstrong). Closes: #229589.
+  * dpkg-scanpackages outputs help when given the --help or -h option
+    (Don Armstrong). Closes: #319541
+  * Document dpkg-scanpackage -m in man page.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
