* man/C/dpkg-source.1: Document that the -sX switches for dpkg-source are mutually exclusive and only one can be in effect. * scripts/dpkg-source.pl: Warn if more than one -sX switch is specified on the command line. Closes: #246637

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,12 @@
 	* scripts/dpkg-scanpackages.pl: Fix some bugs introduced by
 	the rewrite.
 
+	* man/C/dpkg-source.1: Document that the -sX switches for
+	dpkg-source are mutually exclusive and only one can be in
+	effect.
+	* scripts/dpkg-source.pl: Warn if more than one -sX switch
+	is specified on the command line.
+
 2006-01-29  Don Armstrong  <don@debian.org>
 
 	* scripts/dpkg-scanpackages.pl: Rewrite the script to support
