--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,9 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   * dpkg-scanpackages outputs help when given the --help or -h option
     (Don Armstrong). Closes: #319541
   * Document dpkg-scanpackage -m in man page.
+  * Let warn dpkg-source if more than one -sX option was given and
+    document the behaviour in this case in the man page.
+    Closes: #246637
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
