--- a/man/C/dpkg-source.1
+++ b/man/C/dpkg-source.1
@@ -419,6 +419,11 @@ unpacks the original source tree.
 ensures that the original source is neither copied to the current
 directory nor unpacked.  Any original source tree that was in the
 current directory is still removed.
+.PP
+All the
+.B \-sX
+options are mutually exclusive. If you specify more than one only the
+last one will be used.
 .SH dpkg\-GENCONTROL OPTIONS
 .B dpkg\-gencontrol
 does not take any non-option arguments.
