Fix some variable name typos that lead to semantic errors. Also change the names of the variables to prevent such errors in the future.

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
     Closes: #246637
   * Make dpkg-source -b more robust regarding to existing symlinks
     by creating new files in a secure manner. Closes: #178839, #338591
+  * Fix some semantic errors in dpkg-shlibdeps due to typos in used
+    variables.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
