Re-run po4a-gettextize Correct accented letters problems in German man pages Remove accidental English "translations" in some PO files Thanks to Nicolas François for the patch

--- a/man/es/dpkg-deb.1.es.po
+++ b/man/es/dpkg-deb.1.es.po
@@ -157,9 +157,7 @@ msgstr ""
 "I<directorio>. I<El>directorio debe tener un subdirectorio B<DEBIAN> el cual "
 "contiene los archivos de información de control.  Este directorio I<no> "
 "aparecerá en el paquete binario, pero, en lugar de esto, los archivos que "
-"tenga serán puestos en el área de información del paquete binario.  Usted "
-"puede especificar el nivel de compresión usado con la opción B<-z#.> B<dpkg-"
-"deb> pasará ésta a gzip."
+"tenga serán puestos en el área de información del paquete binario."
 
 # type: Plain text
 #: ../C/dpkg-deb.1:66
@@ -168,8 +166,8 @@ msgid ""
 "You can specify the compressionlevel used by adding a B<-z#> option.  B<dpkg-"
 "deb> will pass that option on to gzip."
 msgstr ""
-"You can specify the compressionlevel used by adding a B<-z#> option.  B<dpkg-"
-"deb> will pass that option on to gzip."
+"Usted puede especificar el nivel de compresión usado con la opción B<-z#.> "
+"B<dpkg-deb> pasará ésta a gzip."
 
 # type: Plain text
 #: ../C/dpkg-deb.1:78
@@ -186,7 +184,7 @@ msgstr ""
 "problemas, y mostrará el nombre del paquete binario que se está creando.  "
 "B<dpkg-deb> también comprobará los permisos de los programas del "
 "desarrollador así como de los otros archivos que se encuentren en el "
-"directorio B<DEBIAN>"
+"directorio B<DEBIAN>."
 
 # type: Plain text
 #: ../C/dpkg-deb.1:85
@@ -382,7 +380,7 @@ msgid ""
 "to extract a particular file from a package archive."
 msgstr ""
 "Descomprime el árbol del sistema de archivos de un paquete binarios y lo "
-"envía hacia la salida estándar en formato B<tar> Si se utiliza junto con "
+"envía hacia la salida estándar en formato B<tar>.  Si se utiliza junto con "
 "B<tar>(1)  se puede utilizar para descomprimir un fichero concreto de un "
 "paquete."
 
