--- a/man/es/dpkg.1.es.po
+++ b/man/es/dpkg.1.es.po
@@ -1441,7 +1441,6 @@ msgstr "B<--log=>I<filename>"
 
 # type: Plain text
 #: ../C/dpkg.1:489
-#, fuzzy
 msgid ""
 "Log status change updates and actions to I<filename>.  This can be given "
 "multiple times.  Log messages are of the form `YYYY-MM-DD HH:MM:SS status "
@@ -1452,14 +1451,6 @@ msgid ""
 "DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
 "changes where I<E<lt>decision> is either install or keep."
 msgstr ""
-"Log status change updates and actions to I<filename>.  This can be given "
-"multiple times.  Log messages are of the form `YYYY-MM-DD HH:MM:SS status "
-"E<lt>stateE<gt> E<lt>pkgE<gt> E<lt>installed-versionE<gt>' for status change "
-"updates; `YYYY-MM-DD HH:MM:SS E<lt>actionE<gt> E<lt>pkgE<gt> E<lt>installed-"
-"versionE<gt> E<lt>available-versionE<gt>' for actions where "
-"I<E<lt>actionE<gt>> is one of install, upgrade, remove, purge; and `YYYY-MM-"
-"DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
-"changes where I<E<lt>decision> is either install or keep."
 
 # type: SH
 #: ../C/dpkg.1:489
@@ -1625,13 +1616,10 @@ msgstr "B<DPKG_OLD_CONFFILE>"
 
 # type: Plain text
 #: ../C/dpkg.1:538
-#, fuzzy
 msgid ""
 "Set by B<dpkg> to the filename of the old configuration file when you start "
 "a shell to examine a changed configuration.  file."
 msgstr ""
-"Set by B<dpkg> to the filename of the old configuration file when you start "
-"a shell to examine a changed configuration.  file."
 
 # type: TP
 #: ../C/dpkg.1:538
@@ -1641,13 +1629,10 @@ msgstr "B<DPKG_NEW_CONFFILE>"
 
 # type: Plain text
 #: ../C/dpkg.1:543
-#, fuzzy
 msgid ""
 "Set by B<dpkg> to the filename of the newversion of a configuration file "
 "when you start a shell to examine a changed configuration.  file."
 msgstr ""
-"Set by B<dpkg> to the filename of the newversion of a configuration file "
-"when you start a shell to examine a changed configuration.  file."
 
 # type: SH
 #: ../C/dpkg.1:544
@@ -1671,7 +1656,7 @@ msgstr "B< dpkg -l '*vi*'>"
 #: ../C/dpkg.1:551
 #, fuzzy
 msgid "To see the entries in I</var/lib/dpkg/available> on two packages:"
-msgstr "To see the entries in I</var/lib/dpkg/available> on two packages:"
+msgstr "Para ver las entradas en I</var/lib/dpkg/available> de varios paquetes:"
 
 # type: Plain text
 #: ../C/dpkg.1:553
@@ -1681,9 +1666,8 @@ msgstr "B< dpkg --print-avail elvis vim | less>"
 
 # type: Plain text
 #: ../C/dpkg.1:556
-#, fuzzy
 msgid "To search the listing of packages yourself:"
-msgstr "To search the listing of packages yourself:"
+msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:558
