--- a/man/ru/dpkg.1.ru.po
+++ b/man/ru/dpkg.1.ru.po
@@ -571,13 +571,10 @@ msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:179
-#, fuzzy
 msgid ""
 "A simpler one-shot command to retrieve and update the I<available> file is "
 "B<dselect update>."
 msgstr ""
-"A simpler one-shot command to retrieve and update the I<available> file is "
-"B<dselect update>."
 
 # type: TP
 #: ../C/dpkg.1:179
@@ -868,9 +865,8 @@ msgstr "B<dpkg-query-actions>"
 
 # type: Plain text
 #: ../C/dpkg.1:272
-#, fuzzy
 msgid "See B<dpkg-query>(1) for more information about the following actions."
-msgstr "See B<dpkg-query>(1) for more information about the following actions."
+msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:285
@@ -887,16 +883,16 @@ msgid ""
 "B<dpkg -p> | B<--print-avail> I<package>\n"
 "    Display details about I<package>, as found in I</var/lib/dpkg/available>.\n"
 msgstr ""
-"B<dpkg -l> | B<--list> I<package-name-pattern> ...\n"
-"    List packages matching given pattern.\n"
-"B<dpkg -s> | B<--status> I<package-name> ...\n"
-"    Report status of specified package.\n"
-"B<dpkg -L> | B<--listfiles> I<package> ...\n"
-"    List files installed to your system from B<package>.\n"
-"B<dpkg -S> | B<--search> I<filename-search-pattern> ...\n"
-"    Search for a filename from installed packages.\n"
-"B<dpkg -p> | B<--print-avail> I<package>\n"
-"    Display details about I<package>, as found in I</var/lib/dpkg/available>.\n"
+"B<dpkg -l> | B<--list >I<E<lt>образец имени пакетаE<gt>>...\n"
+"    Показывает пакеты, соответствующие данному образцу. Если I<образец имени пакета> не задан, показывает все пакеты в B</var/lib/dpkg/available>.\n"
+"B<dpkg -s> | B<--status >I<E<lt>имя пакетаE<gt>>...\n"
+"    Сообщает о статусе указанного пакета, просто показывая соответствующую запись из базы статусов установленных пакетов.\n"
+"B<dpkg -L> | B<--listfiles> I<E<lt>имя пакетаE<gt>> ...\n"
+"    Показывает файлы, установленные на вашей системе из пакета с указанным именем. Заметьте, однако, что файлы, созданные установочными скриптами пакета, не будут показаны.\n"
+"B<dpkg -S> | B<--search> I<E<lt>образец имени файла для поискаE<gt>> ...\n"
+"    Ищет в установленных пакетах файл по заданному образцу.  В образце допустимы стандартные символы шаблонов командной оболочки.\n"
+"B<dpkg  -p|--print-avail >I<имя пакета>\n"
+"    Выводит детальную информацию о I<пакете>, которую извлекает из файла I</var/lib/dpkg/available>.\n"
 
 # type: SH
 #: ../C/dpkg.1:289
@@ -1059,7 +1055,6 @@ msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:349
-#, fuzzy
 msgid ""
 "I<Warning: At present dpkg does not do any dependency checking on downgrades "
 "and therefore will not warn you if the downgrade breaks the dependency of "
@@ -1067,11 +1062,6 @@ msgid ""
 "essential system components can even make your whole system unusable.  Use "
 "with care.>"
 msgstr ""
-"I<Warning: At present dpkg does not do any dependency checking on downgrades "
-"and therefore will not warn you if the downgrade breaks the dependency of "
-"some other package.  This can have serious side effects, downgrading "
-"essential system components can even make your whole system unusable.  Use "
-"with care.>"
 
 # type: Plain text
 #: ../C/dpkg.1:353
@@ -1142,13 +1132,10 @@ msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:381
-#, fuzzy
 msgid ""
 "B<confmiss>: Always install a missing configuration file. This is dangerous, "
 "since it means not preserving a change (removing) made to the file."
 msgstr ""
-"B<confmiss>: Always install a missing configuration file. This is dangerous, "
-"since it means not preserving a change (removing) made to the file."
 
 # type: Plain text
 #: ../C/dpkg.1:386
@@ -1234,9 +1221,8 @@ msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:418
-#, fuzzy
 msgid "B<bad-verify>: Install a package even if it fails authenticity check."
-msgstr "B<bad-verify>: Install a package even if it fails authenticity check."
+msgstr ""
 
 # type: TP
 #: ../C/dpkg.1:419
@@ -1440,13 +1426,12 @@ msgstr ""
 
 # type: TP
 #: ../C/dpkg.1:479
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--log=>I<filename>"
-msgstr "B<--log=>I<filename>"
+msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:489
-#, fuzzy
 msgid ""
 "Log status change updates and actions to I<filename>.  This can be given "
 "multiple times.  Log messages are of the form `YYYY-MM-DD HH:MM:SS status "
@@ -1457,14 +1442,6 @@ msgid ""
 "DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
 "changes where I<E<lt>decision> is either install or keep."
 msgstr ""
-"Log status change updates and actions to I<filename>.  This can be given "
-"multiple times.  Log messages are of the form `YYYY-MM-DD HH:MM:SS status "
-"E<lt>stateE<gt> E<lt>pkgE<gt> E<lt>installed-versionE<gt>' for status change "
-"updates; `YYYY-MM-DD HH:MM:SS E<lt>actionE<gt> E<lt>pkgE<gt> E<lt>installed-"
-"versionE<gt> E<lt>available-versionE<gt>' for actions where "
-"I<E<lt>actionE<gt>> is one of install, upgrade, remove, purge; and `YYYY-MM-"
-"DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
-"changes where I<E<lt>decision> is either install or keep."
 
 # type: SH
 #: ../C/dpkg.1:489
@@ -1631,13 +1608,10 @@ msgstr "B<DPKG_OLD_CONFFILE>"
 
 # type: Plain text
 #: ../C/dpkg.1:538
-#, fuzzy
 msgid ""
 "Set by B<dpkg> to the filename of the old configuration file when you start "
 "a shell to examine a changed configuration.  file."
 msgstr ""
-"Set by B<dpkg> to the filename of the old configuration file when you start "
-"a shell to examine a changed configuration.  file."
 
 # type: TP
 #: ../C/dpkg.1:538
@@ -1647,13 +1621,10 @@ msgstr "B<DPKG_NEW_CONFFILE>"
 
 # type: Plain text
 #: ../C/dpkg.1:543
-#, fuzzy
 msgid ""
 "Set by B<dpkg> to the filename of the newversion of a configuration file "
 "when you start a shell to examine a changed configuration.  file."
 msgstr ""
-"Set by B<dpkg> to the filename of the newversion of a configuration file "
-"when you start a shell to examine a changed configuration.  file."
 
 # type: SH
 #: ../C/dpkg.1:544
@@ -1779,9 +1750,9 @@ msgstr ""
 
 # type: SH
 #: ../C/dpkg.1:591
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "ADDITIONAL FUNCTIONALITY"
-msgstr "СМОТРИ ТАКЖЕ"
+msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:594
@@ -1789,13 +1760,13 @@ msgstr "СМОТРИ ТАКЖЕ"
 msgid ""
 "Additional functionality can be gained by installing any of the following "
 "packages: I<apt>, I<aptitude> and I<debsums>."
-msgstr "B<dselect>(8), B<dpkg-deb>(1), B<deb>(5)  и B<deb-control>(5)."
+msgstr ""
 
 # type: SH
 #: ../C/dpkg.1:595
 #, fuzzy, no-wrap
 msgid "SEE ALSO"
-msgstr "ОШИБКИ РЕАЛИЗАЦИИ"
+msgstr "СМОТРИ ТАКЖЕ"
 
 # type: Plain text
 #: ../C/dpkg.1:602
@@ -1803,27 +1774,25 @@ msgstr "ОШИБКИ РЕАЛИЗАЦИИ"
 msgid ""
 "B<dselect>(8), B<dpkg-deb>(1), B<deb>(5), B<deb-control>(5), and B<dpkg-"
 "reconfigure>(8)"
-msgstr "B<--no-act> обычно дает меньше информации, чем могло бы быть полезным."
+msgstr "B<dselect>(8), B<dpkg-deb>(1), B<deb>(5)  и B<deb-control>(5)."
 
 # type: SH
 #: ../C/dpkg.1:603
 #, fuzzy, no-wrap
 msgid "BUGS"
-msgstr "АВТОРЫ"
+msgstr "ОШИБКИ РЕАЛИЗАЦИИ"
 
 # type: Plain text
 #: ../C/dpkg.1:606
 #, fuzzy
 msgid "B<--no-act> usually gives less information than might be helpful."
-msgstr ""
-"См.  B</usr/share/doc/dpkg/THANKS>, где приведен список тех, кто участвовал "
-"в разработке B<dpkg>."
+msgstr "B<--no-act> обычно дает меньше информации, чем могло бы быть полезным."
 
 # type: SH
 #: ../C/dpkg.1:607
 #, fuzzy, no-wrap
 msgid "AUTHORS"
-msgstr "ПЕРЕВОД"
+msgstr "АВТОРЫ"
 
 # type: Plain text
 #: ../C/dpkg.1:611
@@ -1831,4 +1800,6 @@ msgstr "ПЕРЕВОД"
 msgid ""
 "See B</usr/share/doc/dpkg/THANKS.gz> for the list of people who have\n"
 "contributed to B<dpkg> .\n"
-msgstr "Это руководство перевел с английского Виктор Вислобоков (2:5054/8.34@FidoNet). Обновление и корректура: Alexey Mahotkin E<lt>alexm@hsys.msk.ruE<gt>."
+msgstr ""
+"См.  B</usr/share/doc/dpkg/THANKS>, где приведен список тех, кто участвовал "
+"в разработке B<dpkg>."
