--- a/man/pt_BR/dpkg.1.pt_BR.po
+++ b/man/pt_BR/dpkg.1.pt_BR.po
@@ -562,13 +562,10 @@ msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:179
-#, fuzzy
 msgid ""
 "A simpler one-shot command to retrieve and update the I<available> file is "
 "B<dselect update>."
 msgstr ""
-"A simpler one-shot command to retrieve and update the I<available> file is "
-"B<dselect update>."
 
 # type: TP
 #: ../C/dpkg.1:179
@@ -867,16 +864,16 @@ msgid ""
 "B<dpkg -p> | B<--print-avail> I<package>\n"
 "    Display details about I<package>, as found in I</var/lib/dpkg/available>.\n"
 msgstr ""
-"B<dpkg -l> | B<--list> I<package-name-pattern> ...\n"
-"    List packages matching given pattern.\n"
-"B<dpkg -s> | B<--status> I<package-name> ...\n"
-"    Report status of specified package.\n"
-"B<dpkg -L> | B<--listfiles> I<package> ...\n"
-"    List files installed to your system from B<package>.\n"
-"B<dpkg -S> | B<--search> I<filename-search-pattern> ...\n"
-"    Search for a filename from installed packages.\n"
-"B<dpkg -p> | B<--print-avail> I<package>\n"
-"    Display details about I<package>, as found in I</var/lib/dpkg/available>.\n"
+"B<dpkg -l> | B<--list> I<padrão-do-nome-do-pacote> ..."
+"    Lista os pacotes que combinam com o padrão dado.\n"
+"B<dpkg -s> | B<--status> I<nome-do-pacote> ...\n"
+"    Exibe o estado do pacote especificado. Isso apenas mostra a entrada na base de dados dos pacotes instalados.\n"
+"B<dpkg -L> | B<--listfiles> I<pacote> ...\n"
+"    Lista os arquivos instalados em seu sistema a partir do B<pacote>.\n"
+"B<dpkg -S> | B<--search> I<padrão-de-procura> ...\n"
+"    Procura por um nome de arquivo a partir dos pacotes instalados. Todos os caracteres curinga padrões de shell podem ser usados no padrão.\n"
+"B<dpkg  -p|--print-avail >I<pacote>\n"
+"    Exibe detalhes sobre o I<pacote>, como encontrados em I</var/lib/dpkg/available>.\n"
 
 # type: SH
 #: ../C/dpkg.1:289
@@ -1034,7 +1031,6 @@ msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:349
-#, fuzzy
 msgid ""
 "I<Warning: At present dpkg does not do any dependency checking on downgrades "
 "and therefore will not warn you if the downgrade breaks the dependency of "
@@ -1042,11 +1038,6 @@ msgid ""
 "essential system components can even make your whole system unusable.  Use "
 "with care.>"
 msgstr ""
-"I<Warning: At present dpkg does not do any dependency checking on downgrades "
-"and therefore will not warn you if the downgrade breaks the dependency of "
-"some other package.  This can have serious side effects, downgrading "
-"essential system components can even make your whole system unusable.  Use "
-"with care.>"
 
 # type: Plain text
 #: ../C/dpkg.1:353
@@ -1406,7 +1397,6 @@ msgstr "B<--log=>I<filename>"
 
 # type: Plain text
 #: ../C/dpkg.1:489
-#, fuzzy
 msgid ""
 "Log status change updates and actions to I<filename>.  This can be given "
 "multiple times.  Log messages are of the form `YYYY-MM-DD HH:MM:SS status "
@@ -1417,14 +1407,6 @@ msgid ""
 "DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
 "changes where I<E<lt>decision> is either install or keep."
 msgstr ""
-"Log status change updates and actions to I<filename>.  This can be given "
-"multiple times.  Log messages are of the form `YYYY-MM-DD HH:MM:SS status "
-"E<lt>stateE<gt> E<lt>pkgE<gt> E<lt>installed-versionE<gt>' for status change "
-"updates; `YYYY-MM-DD HH:MM:SS E<lt>actionE<gt> E<lt>pkgE<gt> E<lt>installed-"
-"versionE<gt> E<lt>available-versionE<gt>' for actions where "
-"I<E<lt>actionE<gt>> is one of install, upgrade, remove, purge; and `YYYY-MM-"
-"DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
-"changes where I<E<lt>decision> is either install or keep."
 
 # type: SH
 #: ../C/dpkg.1:489
@@ -1728,13 +1710,10 @@ msgstr ""
 
 # type: Plain text
 #: ../C/dpkg.1:594
-#, fuzzy
 msgid ""
 "Additional functionality can be gained by installing any of the following "
 "packages: I<apt>, I<aptitude> and I<debsums>."
 msgstr ""
-"Additional functionality can be gained by installing any of the following "
-"packages: I<apt>, I<aptitude> and I<debsums>."
 
 # type: SH
 #: ../C/dpkg.1:595
