--- a/man/sv/deb-control.5.sv.po
+++ b/man/sv/deb-control.5.sv.po
@@ -518,6 +518,25 @@ msgid ""
 " than Unix grep or egrep. (Regular expressions containing backreferencing\n"
 " will run more slowly, however.)\n"
 msgstr ""
+"Package: grep\n"
+"Essential: yes\n"
+"Priority: required\n"
+"Section: base\n"
+"Maintainer: Wichert Akkerman E<lt>wakkerma@debian.orgE<gt>\n"
+"Architecture: sparc\n"
+"Version: 2.4-1\n"
+"Pre-Depends: libc6 (E<gt>= 2.0.105)\n"
+"Provides: rgrep\n"
+"Conflicts: rgrep\n"
+"Description: GNU grep, egrep and fgrep.\n"
+" The GNU family of grep utilities may be the \"fastest grep in the west\".\n"
+" GNU grep is based on a fast lazy-state deterministic matcher (about\n"
+" twice as fast as stock Unix egrep) hybridized with a Boyer-Moore-Gosper\n"
+" search for a fixed string that eliminates impossible text from being\n"
+" considered by the full regexp matcher without necessarily having to\n"
+" look at every character. The result is typically many times faster\n"
+" than Unix grep or egrep. (Regular expressions containing backreferencing\n"
+" will run more slowly, however.)\n"
 
 # type: SH
 #: ../C/deb-control.5:198
