--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-05  Christian Perrier  <bubulle@debian.org>
+
+	* man/*. Switch all translations to po4a. Work contributed
+	by Nicolas François.
+
 2006-01-30  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-shlibdeps.pl: Fix some variable name
