Add (finally!) a changelog entry about the switch to po4a Add a Build-Depends on po4a

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,10 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   * Fix some semantic errors in dpkg-shlibdeps due to typos in used
     variables.
 
+  [ Christian Perrier ]
+  * Switch to po4a for manpages translation. Closes: #320122
+    This adds a Build6Depends on po4a
+
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
 dpkg (1.13.13) unstable; urgency=low
