Set the HOME environment variable when using the --chuid switch in start-stop-daemon. Closes: #295169, #267784

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,9 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Make start-stop-daemon print the proper version instead of 'VERSION'.
-  
+  * Set the HOME environment variable when using the --chuid switch in
+    start-stop-daemon. Closes: #295169, #267784
+
   [ Frank Lichtenheld ]
   * Let dpkg-source ignore comments in the hunk header as used by
     diff -p (Anand Kumria). Closes: #344880
