--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-06  Guillem Jover  <guillem@debian.org>
+
+	* utils/start-stop-daemon.c (main): When using --chuid set the HOME
+	environment variable.
+
 2006-02-05  Christian Perrier  <bubulle@debian.org>
 
 	* man/*. Switch all translations to po4a. Work contributed
