Catalan translation update

--- a/po/ca.po
+++ b/po/ca.po
@@ -1,14 +1,14 @@
 # Catalan translation of Dpkg.
-# Copyright © 2001, 2002, 2003, 2004, 2005 Software in the Public Interest, Inc.
+# Copyright © 2001, 2002, 2003, 2004, 2005, 2006 Software in the Public Interest, Inc.
 # Antoni Bella <bella5@teleline.es>, 2001, 2002.
-# Jordi Mallach <jordi@debian.org>, 2002, 2003, 2004, 2005.
+# Jordi Mallach <jordi@debian.org>, 2002, 2003, 2004, 2005, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-01-23 19:31+0100\n"
-"PO-Revision-Date: 2005-08-22 10:06+0200\n"
+"PO-Revision-Date: 2006-02-05 22:07+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -240,9 +240,9 @@ msgid "unable to install updated status of `%.250s'"
 msgstr "no es pot instal·lar l'estat actualització de «%.250s»"
 
 #: lib/dbmodify.c:301
-#, fuzzy, c-format
+#, c-format
 msgid "couldn't open log `%s': %s\n"
-msgstr "no s'ha pogut obrir el registre «%s»"
+msgstr "no s'ha pogut obrir el registre «%s»: %s\n"
 
 #: lib/dump.c:291
 #, c-format
@@ -1240,9 +1240,9 @@ msgid "unable to restore backup version of `%.250s'"
 msgstr "no es pot restablir la versió de la còpia de seguretat de «%.250s»"
 
 #: src/cleanup.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "unable to remove newly-installed version of `%.250s'"
-msgstr "no es pot esborrar la versió acabada d'extraure de «%.250s»"
+msgstr "no es pot eliminar la versió acabada d'instal·lar de «%.250s»"
 
 #: src/cleanup.c:101
 #, c-format
