--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,8 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Switch to po4a for manpages translation. Closes: #320122
     This adds a Build6Depends on po4a
+  * Updated Translations:
+    - Catalan (Jordi Mallach). Closes: #351587
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
