--- a/man/fr/dpkg-query.1.fr.po
+++ b/man/fr/dpkg-query.1.fr.po
@@ -5,71 +5,68 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2005-07-03 15:04+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
+"POT-Creation-Date: 2006-02-04 21:34+0100\n"
+"PO-Revision-Date: 2006-02-04 22:22+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-# type: TH
+# type: Plain text
 #: ../C/dpkg-query.1:1
-#, fuzzy, no-wrap
-msgid "DPKG-QUERY"
-msgstr "DPKG-QUERY"
+#, no-wrap
+msgid "dpkg-query"
+msgstr "dpkg-query"
 
 # type: TH
 #: ../C/dpkg-query.1:1
-#, fuzzy, no-wrap
-msgid "August 2001"
-msgstr "Août 2001"
+#, no-wrap
+msgid "2006-01-26"
+msgstr "26-01-2006"
 
 # type: TH
 #: ../C/dpkg-query.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
 msgstr "Projet Debian"
 
 # type: TH
 #: ../C/dpkg-query.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg suite"
 msgstr "suite dpkg"
 
 # type: SH
 #: ../C/dpkg-query.1:2
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
 msgstr "NOM"
 
 # type: Plain text
 #: ../C/dpkg-query.1:4
-#, fuzzy
 msgid "dpkg-query - a tool to query the dpkg database"
 msgstr "dpkg-query - Un outil pour interroger la base de données de dpkg"
 
 # type: SH
 #: ../C/dpkg-query.1:5
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
 msgstr "SYNOPSIS"
 
 # type: Plain text
 #: ../C/dpkg-query.1:7
-#, fuzzy
 msgid "B<dpkg-query>"
 msgstr "B<dpkg-query>"
 
 # type: SH
 #: ../C/dpkg-query.1:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DESCRIPTION"
 msgstr "DESCRIPTION"
 
 # type: Plain text
 #: ../C/dpkg-query.1:11
-#, fuzzy
 msgid ""
 "B<dpkg-query> is a tool to show information about packages listed in the "
 "B<dpkg> database."
@@ -79,26 +76,25 @@ msgstr ""
 
 # type: SH
 #: ../C/dpkg-query.1:13
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "COMMANDS"
 msgstr "COMMANDES"
 
 # type: TP
 #: ../C/dpkg-query.1:14
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-l> | B<--list> I<package-name-pattern> ..."
 msgstr "B<-l> | B<--list> I<nom-paquet-motif> ..."
 
 # type: Plain text
 #: ../C/dpkg-query.1:22
-#, fuzzy
 msgid ""
 "List packages matching given pattern. If no I<package-name-pattern> is "
 "given, list all packages in I</var/lib/dpkg/status>.  Normal shell wildchars "
 "are allowed in I<package-name-pattern>. Please note you will probably have "
 "to quote I<package-name-pattern> to prevent the shell from performing "
 "filename expansion. For example this will list all package names starting "
-"with ``libc5'':"
+"with ``libc6'':"
 msgstr ""
 "Liste les paquets correspondants au motif donné. Quand on ne donne aucun "
 "I<nom-paquet-motif>, tous les paquets listés dans I</var/lib/dpkg/status> "
@@ -106,41 +102,56 @@ msgstr ""
 "sont autorisés dans I<nom-paquet-motif>. Il faudra sans doute mettre I<nom-"
 "paquet-motif> entre apostrophes pour éviter l'expansion des noms de fichier "
 "par l'interpréteur de commandes. Par exemple, tous les paquets dont le nom "
-"commence par «\\ libc5\\ » seront affichés par la commande\\ :"
+"commence par «\\ libc6\\ » seront affichés par la commande\\ :"
 
 # type: Plain text
 #: ../C/dpkg-query.1:26
-#, fuzzy, no-wrap
-msgid "  B<dpkg-query -l 'libc5*'>\n"
-msgstr "  B<dpkg-query -l 'libc5*'>\n"
+#, no-wrap
+msgid "  B<dpkg-query -l 'libc6*'>\n"
+msgstr "  B<dpkg-query -l 'libc6*'>\n"
+
+# type: Plain text
+#: ../C/dpkg-query.1:32
+msgid ""
+"The output format of this option is not configurable, but varies "
+"automatically to fit the terminal width. It is intended for human readers, "
+"and is not easily machine-readable. See B<-W> (B<--show>)  and B<--"
+"showformat> for a way to configure the output format."
+msgstr ""
+"On ne peut pas configurer le format de sortie de cette option. Il s'adapte "
+"automatiquement à la largeur du terminal. Ce format est destiné aux humains "
+"et la machine le lit mal. Voyez B<-W> (B<--show>) et B<--showformat> pour "
+"une possible configuration de ce format."
 
 # type: TP
-#: ../C/dpkg-query.1:27
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:32
+#, no-wrap
 msgid "B<-W> | B<--show> I<package-name-pattern> ..."
 msgstr "B<-W> | B<--show> I<nom-paquet-motif>..."
 
 # type: Plain text
-#: ../C/dpkg-query.1:32
-#, fuzzy
+#: ../C/dpkg-query.1:39
 msgid ""
 "Just like the B<--list> option this will list all packages matching the "
 "given pattern. However the output can be customized using the B<--"
-"showformat> option."
+"showformat> option.  The default output format gives one line per matching "
+"package, each line having the name and installed version of the package, "
+"separated by a tab."
 msgstr ""
-"Tout comme l'option B<--list>, elle affiche la liste des paquets qui "
+"Tout comme l'option B<--list>, cette option affiche la liste des paquets qui "
 "correspondent au motif donné. La sortie peut cependant être formatée en "
-"utilisant l'option B<--showformat>."
+"utilisant l'option B<--showformat>. Le format de sortie par défaut est le "
+"suivant\\ : une ligne pour chaque paquet, avec le nom et la version "
+"installée, séparé par une tabulation."
 
 # type: TP
-#: ../C/dpkg-query.1:32
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:39
+#, no-wrap
 msgid "B<-s> | B<--status> I<package-name> ..."
 msgstr "B<-s> | B<--status> I<nom-paquet> ..."
 
 # type: Plain text
-#: ../C/dpkg-query.1:36
-#, fuzzy
+#: ../C/dpkg-query.1:43
 msgid ""
 "Report status of specified package. This just displays the entry in the "
 "installed package status database."
@@ -149,14 +160,13 @@ msgstr ""
 "la base de données concernant les états des paquets installés."
 
 # type: TP
-#: ../C/dpkg-query.1:36
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:43
+#, no-wrap
 msgid "B<-L> | B<--listfiles> I<package> ..."
 msgstr "B<-L> | B<--listfiles> I<paquet> ..."
 
 # type: Plain text
-#: ../C/dpkg-query.1:41
-#, fuzzy
+#: ../C/dpkg-query.1:48
 msgid ""
 "List files installed to your system from B<package>.  However, note that "
 "files created by package-specific installation-scripts are not listed."
@@ -166,14 +176,13 @@ msgstr ""
 "particuliers au paquet ne sont pas affichés."
 
 # type: TP
-#: ../C/dpkg-query.1:41
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:48
+#, no-wrap
 msgid "B<-S> | B<--search> I<filename-search-pattern> ..."
 msgstr "B<-S> | B<--search> I<motif-de-recherche> ..."
 
 # type: Plain text
-#: ../C/dpkg-query.1:47
-#, fuzzy
+#: ../C/dpkg-query.1:54
 msgid ""
 "Search for a filename from installed packages. All standard shell wildchars "
 "can be used in the pattern.  This command will not list extra files created "
@@ -185,14 +194,13 @@ msgstr ""
 "responsable de paquet, ni les alternatives."
 
 # type: TP
-#: ../C/dpkg-query.1:47
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:54
+#, no-wrap
 msgid "B<-p> |B<--print-avail> package"
 msgstr "B<-p> |B<--print-avail> paquet"
 
 # type: Plain text
-#: ../C/dpkg-query.1:51
-#, fuzzy
+#: ../C/dpkg-query.1:58
 msgid ""
 "Display details about I<package>, as found in I</var/lib/dpkg/available>."
 msgstr ""
@@ -200,44 +208,41 @@ msgstr ""
 "dans le fichier I</var/lib/dpkg/available>."
 
 # type: TP
-#: ../C/dpkg-query.1:51
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:58
+#, no-wrap
 msgid "B<--licence> | B<--license>"
 msgstr "B<--licence> | B<--license>"
 
 # type: Plain text
-#: ../C/dpkg-query.1:54
-#, fuzzy
+#: ../C/dpkg-query.1:61
 msgid "Display licence and copyright information."
 msgstr "Affiche des renseignements sur la licence et le copyright."
 
 # type: TP
-#: ../C/dpkg-query.1:54
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:61
+#, no-wrap
 msgid "B<--version>"
 msgstr "B<--version>"
 
 # type: Plain text
-#: ../C/dpkg-query.1:57
-#, fuzzy
+#: ../C/dpkg-query.1:64
 msgid "Display version information."
 msgstr "Affiche des renseignements sur la version."
 
 # type: SH
-#: ../C/dpkg-query.1:58
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:65
+#, no-wrap
 msgid "OPTIONS"
 msgstr "OPTIONS"
 
 # type: TP
-#: ../C/dpkg-query.1:59
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:66
+#, no-wrap
 msgid "B<--admindir=>I<dir>"
 msgstr "B<--admindir>=I<dir>"
 
 # type: Plain text
-#: ../C/dpkg-query.1:63
-#, fuzzy
+#: ../C/dpkg-query.1:70
 msgid ""
 "Change the location of the B<dpkg> database. The default location is I</var/"
 "lib/dpkg>."
@@ -246,47 +251,144 @@ msgstr ""
 "c'est I</var/lib/dpkg>."
 
 # type: TP
-#: ../C/dpkg-query.1:63
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:70
+#, no-wrap
 msgid "B<-f> | B<--showformat=>I<format>"
 msgstr "B<-f> | B<--showformat=>I<format>"
 
 # type: Plain text
-#: ../C/dpkg-query.1:72
-#, fuzzy
+#: ../C/dpkg-query.1:75
 msgid ""
 "This option is used to specify the format of the output B<--show> will "
-"produce.  The format is a string that will be output for each package "
-"listed. It can include the standard escape sequences \\en (newline), \\er "
-"(carriage return) or \\e\\e (plain backslash). Package information can be "
-"included by inserting variable references to package fields using the ${var[;"
-"width]} syntax. Fields are printed be right-aligned unless the width is "
-"negative in which case left alignment will be used."
+"produce.  The format is a string that will be output for each package listed."
 msgstr ""
-"On se sert de cette option pour préciser le format de la sortie que produit "
-"la commande B<--show>. Ce format est une chaîne, produite pour chaque "
-"paquet, qui peut contenir les séquences d'échappement classiques comme \\en "
-"(nouvelle ligne), \\er (retour chariot) ou \\e\\e (simple barre oblique). On "
-"peut inclure des informations concernant un paquet (variables référençant "
-"des champs) en se servant de la syntaxe ${var[;largeur]}. Les champs sont "
-"alignés sur la droite, sauf si largeur est négatif, auquel cas ils sont "
-"alignés sur la gauche."
+"Cette option sert à spécifier le format de sortie de l'option B<--show>. Ce "
+"format est une chaîne pour chaque paquet listé."
+
+# type: Plain text
+#: ../C/dpkg-query.1:77
+msgid "In the format string, \\(lqB<\\e>\\(rq introduces escapes:"
+msgstr "Dans la chaîne, \\(lqB<\\e>\\(rq déspécifie le caractère"
+
+# type: Plain text
+#: ../C/dpkg-query.1:83
+#, no-wrap
+msgid ""
+"    B<\\en>  newline\n"
+"    B<\\er>  carriage return\n"
+"    B<\\et>  tab\n"
+msgstr ""
+"    B<\\en>  nouvelle ligne\n"
+"    B<\\er>  retour chariot\n"
+"    B<\\et>  tabulation\n"
+
+# type: Plain text
+#: ../C/dpkg-query.1:88
+msgid ""
+"\\(lqB<\\e>\\(rq before any other character suppresses any special meaning "
+"of the following character, which is useful for \\(lqB<\\e>\\(rq and \\(lqB<"
+"$>\\(rq."
+msgstr ""
+"\\(lqB<\\e>\\(rq avant un caractère supprime la signification du cartère qui "
+"suit. C'est utile pour les caractères \\(lqB<\\e>\\(rq and \\(lqB<$>\\(rq. "
+
+# type: Plain text
+#: ../C/dpkg-query.1:94
+msgid ""
+"Package information can be included by inserting variable references to "
+"package fields using the syntax \\(lqB<${>I<field>[B<;>I<width>]B<}>\\(rq. "
+"Fields are printed right-aligned unless the width is negative in which case "
+"left alignment will be used. The following I<field>s are recognised:"
+msgstr ""
+"On peut indiquer un paquet en insérant des appels de variables spécifiant "
+"des champs du paquet avec la syntaxe suivante\\ : \\(lqB<${>I<field>[B<;"
+">I<width>]B<}>\\(rq. Les champs sont alignés à droite, à moins que la "
+"largeur ne soit négative, auquel cas ils sont alignés à gauche. Les champs "
+"suivanys sont reconnus\\ :"
+
+# type: Plain text
+#: ../C/dpkg-query.1:125
+#, no-wrap
+msgid ""
+"    B<Architecture>\n"
+"    B<Bugs>\n"
+"    B<Conffiles>\n"
+"    B<Config-Version>\n"
+"    B<Conflicts>\n"
+"    B<Depends>\n"
+"    B<Description>\n"
+"    B<Enhances>\n"
+"    B<Essential>\n"
+"    B<Filename>\n"
+"    B<Installed-Size>\n"
+"    B<MD5sum>\n"
+"    B<MSDOS-Filename>\n"
+"    B<Maintainer>\n"
+"    B<Origin>\n"
+"    B<Package>\n"
+"    B<Pre-Depends>\n"
+"    B<Priority>\n"
+"    B<Provides>\n"
+"    B<Recommends>\n"
+"    B<Replaces>\n"
+"    B<Revision>\n"
+"    B<Section>\n"
+"    B<Size>\n"
+"    B<Source>\n"
+"    B<Status>\n"
+"    B<Suggests>\n"
+"    B<Version>\n"
+msgstr ""
+"    B<Architecture>\n"
+"    B<Bugs>\n"
+"    B<Conffiles>\n"
+"    B<Config-Version>\n"
+"    B<Conflicts>\n"
+"    B<Depends>\n"
+"    B<Description>\n"
+"    B<Enhances>\n"
+"    B<Essential>\n"
+"    B<Filename>\n"
+"    B<Installed-Size>\n"
+"    B<MD5sum>\n"
+"    B<MSDOS-Filename>\n"
+"    B<Maintainer>\n"
+"    B<Origin>\n"
+"    B<Package>\n"
+"    B<Pre-Depends>\n"
+"    B<Priority>\n"
+"    B<Provides>\n"
+"    B<Recommends>\n"
+"    B<Replaces>\n"
+"    B<Revision>\n"
+"    B<Section>\n"
+"    B<Size>\n"
+"    B<Source>\n"
+"    B<Status>\"\n"
+"    B<Suggests>\n"
+"    B<Version>"
+
+# type: Plain text
+#: ../C/dpkg-query.1:128
+msgid "The default format string is \\(lqB<${Package}\\et${Version}\\en>\\(rq."
+msgstr ""
+"Le format par défaut est le suivant\\ : \\(lqB<${Paquet}\\et${Version}\\en>"
+"\\(rq."
 
 # type: SH
-#: ../C/dpkg-query.1:73
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:129
+#, no-wrap
 msgid "ENVIRONMENT"
 msgstr "ENVIRONNEMENT"
 
 # type: TP
-#: ../C/dpkg-query.1:74
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:130
+#, no-wrap
 msgid "B<COLUMNS>"
 msgstr "B<COLUMNS>"
 
 # type: Plain text
-#: ../C/dpkg-query.1:78
-#, fuzzy
+#: ../C/dpkg-query.1:134
 msgid ""
 "This setting influences the output of the B<--list> option by changing the "
 "width of its output."
@@ -295,47 +397,71 @@ msgstr ""
 "modifiant la largeur d'affichage."
 
 # type: SH
-#: ../C/dpkg-query.1:79
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:135
+#, no-wrap
 msgid "AUTHOR"
 msgstr "AUTEUR"
 
 # type: Plain text
-#: ../C/dpkg-query.1:81
-#, fuzzy
+#: ../C/dpkg-query.1:137
 msgid "Copyright 2001 Wichert Akkerman"
 msgstr "Copyright 2001 Wichert Akkerman"
 
 # type: UR
-#: ../C/dpkg-query.1:81
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:137
+#, no-wrap
 msgid "mailto:wakkerma@debian.org"
 msgstr "mailto:wakkerma@debian.org"
 
 # type: Plain text
-#: ../C/dpkg-query.1:83
-#, fuzzy
+#: ../C/dpkg-query.1:139
 msgid "E<lt>wakkerma@debian.orgE<gt>"
 msgstr "E<lt>wakkerma@debian.orgE<gt>"
 
 # type: Plain text
-#: ../C/dpkg-query.1:87
-#, fuzzy
+#: ../C/dpkg-query.1:143
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions.  There is NO warranty."
 msgstr ""
-"C'est un logiciel libre ; voyez la licence publique générale du projet GNU "
-"version 2 ou supérieure pour les droits de copie. Il n'y a PAS de garantie."
+"Ce programme est un logiciel libre ; voyez la licence publique générale du "
+"projet GNU version 2 ou supérieure pour les droits de copie. Il n'y a PAS de "
+"garantie."
 
 # type: SH
-#: ../C/dpkg-query.1:89
-#, fuzzy, no-wrap
+#: ../C/dpkg-query.1:145
+#, no-wrap
 msgid "SEE ALSO"
-msgstr "Voir aussi"
+msgstr "VOIR AUSSI"
 
 # type: Plain text
-#: ../C/dpkg-query.1:91
-#, fuzzy
-msgid "B<dpkg>(8)"
-msgstr "B<dpkg>(8)"
+#: ../C/dpkg-query.1:147
+msgid "B<dpkg>(1)"
+msgstr "B<dpkg>(1)"
+
+# type: TH
+#~ msgid "DPKG-QUERY"
+#~ msgstr "DPKG-QUERY"
+
+# type: TH
+#~ msgid "August 2001"
+#~ msgstr "Août 2001"
+
+# type: Plain text
+#~ msgid ""
+#~ "This option is used to specify the format of the output B<--show> will "
+#~ "produce.  The format is a string that will be output for each package "
+#~ "listed. It can include the standard escape sequences \\en (newline), \\er "
+#~ "(carriage return) or \\e\\e (plain backslash). Package information can be "
+#~ "included by inserting variable references to package fields using the "
+#~ "${var[;width]} syntax. Fields are printed be right-aligned unless the "
+#~ "width is negative in which case left alignment will be used."
+#~ msgstr ""
+#~ "On se sert de cette option pour préciser le format de la sortie que "
+#~ "produit la commande B<--show>. Ce format est une chaîne, produite pour "
+#~ "chaque paquet, qui peut contenir les séquences d'échappement classiques "
+#~ "comme \\en (nouvelle ligne), \\er (retour chariot) ou \\e\\e (simple "
+#~ "barre oblique). On peut inclure des informations concernant un paquet "
+#~ "(variables référençant des champs) en se servant de la syntaxe ${var[;"
+#~ "largeur]}. Les champs sont alignés sur la droite, sauf si largeur est "
+#~ "négatif, auquel cas ils sont alignés sur la gauche."
