--- a/man/fr/dpkg-scanpackages.1.fr.po
+++ b/man/fr/dpkg-scanpackages.1.fr.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2005-07-03 15:04+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
+"POT-Creation-Date: 2006-02-05  9:17+0100\n"
+"PO-Revision-Date: 2006-02-05 09:27+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -14,85 +14,129 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
+#.  This manpage is copyright (C) 1996 Michael Shields <shields@crosslink.net>.
+#.  This is free software; you may redistribute it and/or modify
+#.  it under the terms of the GNU General Public License as
+#.  published by the Free Software Foundation; either version 2,
+#.  or (at your option) any later version.
+#.  This is distributed in the hope that it will be useful, but
+#.  WITHOUT ANY WARRANTY; without even the implied warranty of
+#.  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#.  GNU General Public License for more details.
+#.  You should have received a copy of the GNU General Public
+#.  License along with dpkg; if not, write to the Free Software
+#.  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #: ../C/dpkg-scanpackages.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DPKG-SCANPACKAGES"
 msgstr "DPKG-SCANPACKAGES"
 
 # type: TH
+#.  This manpage is copyright (C) 1996 Michael Shields <shields@crosslink.net>.
+#.  This is free software; you may redistribute it and/or modify
+#.  it under the terms of the GNU General Public License as
+#.  published by the Free Software Foundation; either version 2,
+#.  or (at your option) any later version.
+#.  This is distributed in the hope that it will be useful, but
+#.  WITHOUT ANY WARRANTY; without even the implied warranty of
+#.  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#.  GNU General Public License for more details.
+#.  You should have received a copy of the GNU General Public
+#.  License along with dpkg; if not, write to the Free Software
+#.  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #: ../C/dpkg-scanpackages.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "1996-07-08"
-msgstr "1996-07-08"
+msgstr "08-07-1996"
 
 # type: TH
+#.  This manpage is copyright (C) 1996 Michael Shields <shields@crosslink.net>.
+#.  This is free software; you may redistribute it and/or modify
+#.  it under the terms of the GNU General Public License as
+#.  published by the Free Software Foundation; either version 2,
+#.  or (at your option) any later version.
+#.  This is distributed in the hope that it will be useful, but
+#.  WITHOUT ANY WARRANTY; without even the implied warranty of
+#.  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#.  GNU General Public License for more details.
+#.  You should have received a copy of the GNU General Public
+#.  License along with dpkg; if not, write to the Free Software
+#.  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #: ../C/dpkg-scanpackages.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian project"
 msgstr "Projet Debian"
 
 # type: TH
+#.  This manpage is copyright (C) 1996 Michael Shields <shields@crosslink.net>.
+#.  This is free software; you may redistribute it and/or modify
+#.  it under the terms of the GNU General Public License as
+#.  published by the Free Software Foundation; either version 2,
+#.  or (at your option) any later version.
+#.  This is distributed in the hope that it will be useful, but
+#.  WITHOUT ANY WARRANTY; without even the implied warranty of
+#.  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#.  GNU General Public License for more details.
+#.  You should have received a copy of the GNU General Public
+#.  License along with dpkg; if not, write to the Free Software
+#.  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #: ../C/dpkg-scanpackages.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg utilities"
 msgstr "Utilitaires de Dpkg"
 
 # type: SH
 #: ../C/dpkg-scanpackages.1:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
 msgstr "NOM"
 
 # type: Plain text
 #: ../C/dpkg-scanpackages.1:19
-#, fuzzy
 msgid "dpkg-scanpackages - create Packages files"
 msgstr "dpkg-scanpackages - créer des fichiers «\\ Packages\\ »"
 
 # type: SH
 #: ../C/dpkg-scanpackages.1:20
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
 msgstr "SYNOPSIS"
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:29
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:30
 msgid ""
-"B<dpkg-scanpackages> [I<-u>] [I<-aE<lt>archE<gt>>] I<binarydir> "
+"B<dpkg-scanpackages> [I<-u>] [I<-aE<lt>archE<gt>>] [I<-m>] I<binarydir> "
 "I<overridefile> [I<pathprefix>] B<E<gt>> I<Packages>"
 msgstr ""
-"B<dpkg-scanpackages> [I<-u>] [I<-aE<lt>archE<gt>>] I<rep-de-binaires> "
-"I<fichier-d'-override> [I<chemin-à-préfixer>] B<E<gt>> I<Packages>"
+"B<dpkg-scanpackages> [I<-u>] [I<-aE<lt>archE<gt>>] [I<-m>] I<rep-de-"
+"binaires> I<fichier-d'-override> [I<chemin-à-préfixer>] B<E<gt>> I<Packages>"
 
 # type: SH
-#: ../C/dpkg-scanpackages.1:30
-#, fuzzy, no-wrap
+#: ../C/dpkg-scanpackages.1:31
+#, no-wrap
 msgid "DESCRIPTION"
 msgstr "DESCRIPTION"
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:41
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:42
 msgid ""
 "B<dpkg-scanpackages> sorts through a tree of Debian binary packages and "
-"creates a Packages file, used by B<dselect>(8), etc, to tell the user what "
+"creates a Packages file, used by B<dselect>(1), etc, to tell the user what "
 "packages are available for installation.  These Packages files are the same "
 "as those found on Debian archive sites and CD-ROMs.  You might use B<dpkg-"
 "scanpackages> yourself if making a directory of local packages to install on "
 "a cluster of machines."
 msgstr ""
 "B<dpkg-scanpackages> trie une arborescence contenant des paquets binaires "
-"Debian et crée un fichier «\\ Packages\\ » qui permettra à B<dselect>(8), ou "
+"Debian et crée un fichier «\\ Packages\\ » qui permettra à B<dselect>(1), ou "
 "à un autre programme, de dire à un utilisateur quels sont les paquets qu'il "
-"peut installer.  Ces fichiers «\\ Packages\\ » sont semblables à ceux qu'on "
-"peut trouver sur les sites d'archives Debian ou sur des cédéroms.  Quand on "
+"peut installer. Ces fichiers «\\ Packages\\ » sont semblables à ceux qu'on "
+"peut trouver sur les sites d'archives Debian ou sur des cédéroms. Quand on "
 "crée un répertoire contenant des paquets qu'on veut installer sur un "
-"ensemble de machines, on peut se servir soi-même de B<dpkg-scanpackages.>"
+"ensemble de machines, on peut se servir soi-même de B<dpkg-scanpackages>."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:48
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:49
 msgid ""
 "I<binarydir> is the name of the binary tree to process (for example, "
 "B<contrib/binary-i386>).  It is best to make this relative to the root of "
@@ -100,13 +144,12 @@ msgid ""
 "will start with this string."
 msgstr ""
 "I<rep-de-binaires> est le nom de l'arborescence binaire (par exemple "
-"B<contrib/binary-i386)> que l'on veut traiter.  Il vaut mieux qu'elle soit "
+"B<contrib/binary-i386)> que l'on veut traiter. Il vaut mieux qu'elle soit "
 "relative à la racine de l'archive Debian\\ ; ainsi chaque champ «\\ Filename"
 "\\ » dans le nouveau fichier «\\ Packages\\ » commencera par cette chaîne."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:52
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:53
 msgid ""
 "I<overridefile> is the name of a file to read which contains information "
 "about how the package fits into the distribution; see below."
@@ -116,8 +159,7 @@ msgstr ""
 "dessous."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:55
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:56
 msgid ""
 "I<pathprefix> is an optional string to be prepended to the Filename fields."
 msgstr ""
@@ -125,16 +167,14 @@ msgstr ""
 "Filename\\ »."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:59
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:60
 msgid "If I<-u> is specified, then scan for *.udeb, instead of *.deb."
 msgstr ""
 "Si l'option I<-u> est spécifiée, la commande recherche des *.udeb au lieu de "
 "*.deb."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:62
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:63
 msgid ""
 "When -aI<E<lt>archE<gt>> is specified, then instead of scanning for all "
 "debs, a pattern consisting of *_all.deb and *_arch.deb is used."
@@ -143,15 +183,29 @@ msgstr ""
 "les fichiers debs\\ ; elle utilise un motif équivalent à *_all.deb et à "
 "*_arch.deb."
 
+# type: Plain text
+#: ../C/dpkg-scanpackages.1:69
+msgid ""
+"If more than one version of a package is found only the newest one is "
+"included in the output. If they have the same version and only differ in "
+"architecture only the first one found is used. You can override this "
+"behaviour with the I<-m> switch. If given, all found packages are included "
+"in the output."
+msgstr ""
+"S'il existe plusieurs versions d'un paquet, seule la plus récente est "
+"affichée en sortie. Si les paquets ont la même version mais diffèrent par "
+"l'architecture, seul le premier trouvé est utilisé. Il est possible de "
+"modifier ce comportement avec l'option I<-m>\\ : tous les paquets trouvés "
+"seront affichés en sortie."
+
 # type: SH
-#: ../C/dpkg-scanpackages.1:63
-#, fuzzy, no-wrap
+#: ../C/dpkg-scanpackages.1:70
+#, no-wrap
 msgid "THE OVERRIDE FILE"
 msgstr "LE FICHIER « OVERRIDE »"
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:69
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:76
 msgid ""
 "While most information about a package can be found in the control file, "
 "some must be filled in by the distribution czars rather than by the "
@@ -167,34 +221,30 @@ msgstr ""
 "se trouvent dans le fichier «\\ override\\ »."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:73
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:80
 msgid ""
 "The override file has a simple whitespace-delimited format.  Comments are "
 "allowed (denoted with a B<#>)."
 msgstr ""
 "Les éléments du fichier «\\ override\\ » sont séparés simplement par un "
-"espace.  Les commentaires commencent par un caractère B<«\\ #\\ ».>"
+"espace. Les commentaires commencent par un caractère B<«\\ #\\ »>."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:79
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:86
 msgid "I<package> I<priority> I<section> [I<maintainerinfo>]"
 msgstr "I<paquet> I<priorité> I<section> [I<responsable>]"
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:84
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:91
 msgid ""
 "I<package> is the name of the package.  Entries in the override file for "
 "packages not found in the binary tree are ignored."
 msgstr ""
-"I<paquet> est le nom du paquet.  Les entrées du fichier «\\ override\\ » "
+"I<paquet> est le nom du paquet. Les entrées du fichier «\\ override\\ » "
 "concernant des paquets qui ne sont pas dans l'arborescence sont ignorées."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:93
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:100
 msgid ""
 "I<priority> and I<section> place the package within the release tree; these "
 "ought not to be found in the control file.  If the package is found in a "
@@ -206,8 +256,7 @@ msgstr ""
 "compare avec le contenu de I<section>."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:101
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:108
 msgid ""
 "I<maintainerinfo>, if present, can be either the name of a maintainer for an "
 "unconditional override, or else I<oldmaintainer> B<=E<gt>> I<newmaintainer> "
@@ -219,8 +268,7 @@ msgstr ""
 "responsable."
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:106
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:113
 msgid ""
 "The override files used to make the official Packages lists may be found in "
 "the I<indices> directory on any Debian mirror."
@@ -230,14 +278,13 @@ msgstr ""
 "miroirs Debian."
 
 # type: SH
-#: ../C/dpkg-scanpackages.1:107
-#, fuzzy, no-wrap
+#: ../C/dpkg-scanpackages.1:114
+#, no-wrap
 msgid "DIAGNOSTICS"
 msgstr "DIAGNOSTICS"
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:113
-#, fuzzy
+#: ../C/dpkg-scanpackages.1:120
 msgid ""
 "B<dpkg-scanpackages> outputs the usual self-explanatory errors.  It also "
 "warns about packages that are in the wrong subdirectory, are duplicated, "
@@ -252,13 +299,12 @@ msgstr ""
 "peuvent pas s'appliquer."
 
 # type: SH
-#: ../C/dpkg-scanpackages.1:114
-#, fuzzy, no-wrap
+#: ../C/dpkg-scanpackages.1:121
+#, no-wrap
 msgid "SEE ALSO"
 msgstr "VOIR AUSSI"
 
 # type: Plain text
-#: ../C/dpkg-scanpackages.1:117
-#, fuzzy
-msgid "B<dpkg>(8), B<dselect>(8), B<dpkg-scansources>(1)."
-msgstr "B<dpkg>(8), B<dselect>(8), B<dpkg-scansources>(1)."
+#: ../C/dpkg-scanpackages.1:124
+msgid "B<dpkg>(1), B<dselect>(1), B<dpkg-scansources>(1)."
+msgstr "B<dpkg>(1), B<dselect>(1), B<dpkg-scansources>(1)."
