--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   * Make start-stop-daemon print the proper version instead of 'VERSION'.
   * Set the HOME environment variable when using the --chuid switch in
     start-stop-daemon. Closes: #295169, #267784
+  * Cleanup and unify program usage and version output, make it more i18n
+    friendly. Fix wrong gettext usage with interparsed macros.
+    Thanks to Changwoo Ryu for noticing. Closes: #23791
 
   [ Frank Lichtenheld ]
   * Let dpkg-source ignore comments in the hunk header as used by
