--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-06  Guillem Jover  <guillem@debian.org>
+
+	* *.po: Merged with dpkg.pot.
+
 2006-02-06 Jordi Mallach  <jordi@debian.org>
 
 	* ca.po: updated to 1000t
