--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
     friendly. Fix wrong gettext usage with interparsed macros.
     Thanks to Changwoo Ryu for noticing. Closes: #23791
   * Mark some strings as translatable (Changwoo Ryu). Closes: #256387
+  * Remove a trailing 'C' character from update-alternatives manpage.
 
   [ Frank Lichtenheld ]
   * Let dpkg-source ignore comments in the hunk header as used by
