Updated French translation to annihilate braindmg attempts to break ou world domination

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
     This adds a Build6Depends on po4a
   * Updated Translations:
     - Catalan (Jordi Mallach). Closes: #351587
+    - French (Christian Perrier): 1002t
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
