Add Vietnamese to LINGUAS and merge it with dpkg.pot

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,7 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Switch to po4a for manpages translation. Closes: #320122
     This adds a Build6Depends on po4a
+  * Add Vietnamese to po/LINGUAS as it was previously missing
   * Updated Translations:
     - Catalan (Jordi Mallach). Closes: #351587
     - French (Christian Perrier): 1002t
