--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-07  Christian Perrier  <bubulle@debian.org>
+
+	* LINGUAS: Added Vietnamese
+	* vi.po:   Merge with dpkg.pot
+
 2006-02-06  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: updated to 1002t
