Proofread by Charles Plessy

--- a/po/fr.po
+++ b/po/fr.po
@@ -2291,7 +2291,7 @@ msgstr ""
 "Ce programme est un logiciel libre ; prière de consulter la « GNU General\n"
 "Public  License » version 2 ou supérieure pour prendre connaissance des\n"
 "conditions de reproduction. AUCUNE garantie n'est offerte.\n"
-"Voir « %s --license » pour les détailsde licence et droits de reproduction.\n"
+"Voir « %s --license » pour les détails de licence et droits de reproduction.\n"
 
 #: src/main.c:57
 #, c-format
@@ -4295,8 +4295,8 @@ msgstr ""
 "+..]]\n"
 "                             Configurer les couleurs d'affichage ;\n"
 "  --help                     Afficher ce message d'aide ;\n"
-"  --version                  Afficher la version.\n"
-"  --license                  Show the license.\n"
+"  --version                  Afficher la version ;\n"
+"  --license                  Afficher la licence.\n"
 "\n"
 "Actions:\n"
 "  access update select install config remove quit\n"
@@ -5976,7 +5976,7 @@ msgstr ""
 "\n"
 "Commandes :\n"
 "       -s|--split <fichier> [<préfixe>]   Découpe une archive.\n"
-"       -j|--join <partie> <partie> ...    Fusionne les parties ensemble.\n"
+"       -j|--join <partie> <partie> ...    Fusionne les parties.\n"
 "       -I|--info <partie> ...             Affiche l'information sur une "
 "partie.\n"
 "       -h|--help|--version|--licence      Affiche l'aide/la version/la "
