--- a/debian/changelog
+++ b/debian/changelog
@@ -40,8 +40,9 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   * Updated Translations:
     - Catalan (Jordi Mallach). Closes: #351587
     - French (Christian Perrier): 1002t
+    - Galician (Jacobo Tarrio): 1002t. Closes: #351795
 
- -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
+ -- Christian Perrier <bubulle@debian.org>  Tue,  7 Feb 2006 20:32:15 +0100
 
 dpkg (1.13.13) unstable; urgency=low
 
