Use $@ instead of % in the rule's command of po4a.mk as the later is not replaced there. This fixes a FTBFS.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-02-08  Guillem Jover  <guillem@debian.org>
 
+	* man/po4a.mk (%): Replace % with $@ as the former is not substituted
+	in the rule's command.
+
+2006-02-08  Guillem Jover  <guillem@debian.org>
+
 	* debian/contrl (Build-Depends): Depend on version >= 1.28-4 of
 	libselinux1-dev as it has pkg-config support. Remove libsepol1-dev,
 	now dragged by libselinux1-dev. Add pkg-config.
