--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-08  Piarres Beobide Egana  <pi@beobide.net>
+
+	* eu.po: updated to 1002t
+
 2006-02-07  Jacobo Tarrio  <jtarrio@trasno.net>
 
 	* gl.po: updated to 1002t
