add entry to Changelog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-08  Philippe Batailler <philippe.batailler@free.fr>
+
+        * man/fr/update-alternatives.8.fr.po updated translation
+        * man/fr/update-alternatives.8.fr.po.addendum new file
+
 2006-02-08  Guillem Jover  <guillem@debian.org>
 
 	* man/po4a.mk (%): Replace % with $@ as the former is not substituted
