Slovak translation update

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-09  Peter Mann  <Peter.Mann@tuke.sk>
+
+	* sk.po: updated to 1002t
+
 2005-02-08  Piarres Beobide Egana  <pi@beobide.net>
 
 	* eu.po: updated to 1002t
