--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,7 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
     - French (Christian Perrier): 1002t
     - Galician (Jacobo Tarrio): 1002t. Closes: #351795
     - Basque (Piarres Beobide): 1002t. Closes: #351845
+    - Slovak (Peter Mann): 1002t. Closes: #352087
 
  -- Christian Perrier <bubulle@debian.org>  Tue,  7 Feb 2006 20:32:15 +0100
 
