Add command descriptions in the synopis, and add a usage example for -f in the dpkg-query manpage. Thanks for the initial patch to Philippe Batailler. Closes: #352091

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
     Add a Build-Dependency on pkg-config, thighten libselinux1-dev to
     at least version 1.28-4 which provides a .pc file, and remove
     libsepol1-dev as libselinux1-dev is Depending on it.
+  * Add command descriptions in the synopis, and add a usage example for
+    -f in the dpkg-query manpage. Thanks for the initial patch to
+    Philippe Batailler. Closes: #352091
 
   [ Frank Lichtenheld ]
   * Let dpkg-source ignore comments in the hunk header as used by
